<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/secretsTitleText"
        android:id="@+id/secretsMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hintsTitleText"
        android:id="@+id/hintsTitle"
        android:layout_below="@+id/secretsMainTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hintsText1"
        android:id="@+id/hintsText1"
        android:layout_below="@+id/hintsTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hintsText2"
        android:id="@+id/hintsText2"
        android:layout_below="@+id/hintsText1"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/secretsInfoTitleText"
        android:id="@+id/secretsTitle"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/hintsText2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/secretsText1"
        android:id="@+id/secretsText1"
        android:layout_below="@+id/secretsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/secretText2"
        android:id="@+id/secretText2"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/secretsText1"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
</RelativeLayout>